--- a/src/components/navigation/navbar/Navbar.module.css
+++ b/src/components/navigation/navbar/Navbar.module.css
@@ -9,14 +9,13 @@ body {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-
 .nav {
   height: fit-content;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px 30px;
-  width: 100vw; 
+  width: 100vw;
 }
 
 .ulBox {
@@ -80,7 +79,6 @@ a {
   border-radius: 10px;
 }
 
-
 .authButtons {
   display: flex;
   align-items: center;
@@ -136,21 +134,27 @@ a {
   width: 150px;
 }
 
-.dropdown a,
-.dropdown button {
+.dropdown a {
   display: block;
   padding: 8px;
   text-decoration: none;
   color: #333;
 }
+.dropdown button {
+  color: white;
+}
 
 .dropdown a:hover,
 .dropdown button:hover {
   background-color: #f3f3f3;
+  color: black;
 }
 
-.profileButton:hover .dropdown {
+.active {
   display: block;
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 0.3s ease-out, transform 0.3s ease-out;
 }
 
 .Modal {
