--- a/src/pages/create-account-page/CreateAccountPage.module.css
+++ b/src/pages/create-account-page/CreateAccountPage.module.css
@@ -4,9 +4,8 @@
   flex-direction: column;
   align-items: center;
 }
+
 .backButton {
-  display: inline-block;
-  margin-bottom: 20px;
   position: absolute;
   left: 20px;
   top: 20px;
@@ -22,42 +21,40 @@
 }
 
 .formGroup {
-  display: flex;
-  flex-direction: column;
   margin-bottom: 15px;
 }
 
 .label {
-  font-size: 16px;
+  font-size: 18px; 
+  margin-bottom: 8px; 
 }
 
 .input {
-  padding: 10px;
-  font-size: 16px;
-  width: 600px;
+  padding: 8px; 
+  font-size: 14px; 
+  width: 100%;
+  max-width: 300px; 
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 8px; 
 }
 
 .button {
-  padding: 10px 20px;
-  font-size: 18px;
+  padding: 8px 16px; 
+  font-size: 16px;
   background-color: #2375cd;
   color: #fff;
   border: none;
   cursor: pointer;
+  border-radius: 4px;
 }
-
 
 @media (max-width: 768px) {
   .container {
-    padding: 50px;
+    padding: 20px;
   }
 
   .input {
-    font-size: 14px;
-    max-width: 280px;
-  }
-
-  .button {
-    font-size: 16px;
+    font-size: 12px;
   }
 }
