--- a/src/components/form-input/FormInput.module.css
+++ b/src/components/form-input/FormInput.module.css
@@ -1,32 +1,36 @@
 .formGroup {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 15px;
-  }
-  
-  .label {
-    font-size: 16px;
-  }
-  
-  .input {
-    padding: 10px;
-    font-size: 16px;
-    width: 600px; 
-  }
-  
-  .errorMessage {
-    color: red; 
-  }
-  
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+  width: 85%;
+}
 
-  @media (max-width: 768px) {
-    .formGroup {
-      margin-bottom: 10px;
-    }
-  
-    .input {
-      font-size: 14px;
-      max-width: 280px; 
-    }
+.label {
+  font-size: 16px;
+  margin-bottom: 8px;
+}
+
+.input {
+  padding: 10px;
+  font-size: 16px;
+  width: 100%;
+  max-width: 600px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 8px;
+}
+
+.errorMessage {
+  color: red;
+}
+
+@media (max-width: 768px) {
+  .formGroup {
+    margin-bottom: 10px;
   }
-  
+
+  .input {
+    font-size: 14px;
+    max-width: 100%;
+  }
+}
