--- a/src/pages/create-account-page/CreateAccountPage.module.css
+++ b/src/pages/create-account-page/CreateAccountPage.module.css
@@ -24,20 +24,20 @@
   margin-bottom: 15px;
 }
 
-.label {
-  font-size: 18px; 
-  margin-bottom: 8px; 
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 50%;
+  padding: 20px;
+  margin: 30px 0;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  background-color: #fff;
 }
 
-.input {
-  padding: 8px; 
-  font-size: 14px; 
-  width: 100%;
-  max-width: 300px; 
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  margin-bottom: 8px; 
-}
 
 .button {
   padding: 8px 16px; 
